<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray2"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:fontFamily="@font/font_bold"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="시간" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <TimePicker
            android:theme="@style/AppTheme.NumberPicker"
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/round_button_2"
            android:timePickerMode="spinner"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:fontFamily="@font/font_bold"
            android:text="@string/label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="내용" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <EditText
            android:id="@+id/edit_alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/black1"
            android:fontFamily="@font/font_light"
            android:hint="내용을 입력하세요."
            android:inputType="textCapWords"
            android:maxLength="15"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_bold"
                android:text="@string/days"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="요일" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/check_day_all"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/black1"
                android:text="전체 선택"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/uncheck_day_all"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/black1"
                android:text="전체 해제"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_light"
                android:text="@string/monday"
                android:textStyle="bold"
                tools:text="월요일"

                />

            <CheckBox
                android:id="@+id/edit_alarm_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_light"
                android:text="@string/tuesday"
                android:textStyle="bold"
                tools:text="화요일"

                />

            <CheckBox
                android:id="@+id/edit_alarm_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_light"
                android:text="@string/wednesday"
                android:textStyle="bold"
                tools:text="수요일" />

            <CheckBox
                android:id="@+id/edit_alarm_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_light"
                android:text="@string/thursday"
                android:textStyle="bold"
                tools:text="목요일" />

            <CheckBox
                android:id="@+id/edit_alarm_thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_light"
                android:text="@string/friday"
                android:textStyle="bold"
                tools:text="금요일" />

            <CheckBox
                android:id="@+id/edit_alarm_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_light"
                android:text="@string/saturday"
                android:textStyle="bold"
                tools:text="토요일"

                />

            <CheckBox
                android:id="@+id/edit_alarm_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:fontFamily="@font/font_light"
                android:text="@string/sunday"
                android:textStyle="bold"
                tools:text="일요일" />

            <CheckBox
                android:id="@+id/edit_alarm_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small" />


        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>


</ScrollView>