<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:fontFamily="@font/font_light"
    android:focusableInTouchMode="true"
    android:background="@color/gray2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:background="@color/black1"
                app:subtitleTextAppearance="@style/AppTheme.SubTitleText"
                app:titleTextAppearance="@style/AppTheme.TitleText"/>

            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:background="?attr/colorPrimary">

                <TextView
                    android:textColor="@color/white"
                    android:fontFamily="@font/font_light"
                    style="@style/createEventToolbarItems"
                    android:background="@color/black1"
                    android:id="@+id/tv_cancel"
                    android:layout_marginHorizontal="2dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/cancel" />

                <TextView
                    android:textColor="@color/white"
                    android:fontFamily="@font/font_light"
                    android:background="@color/black1"
                    style="@style/createEventToolbarItems"
                    android:id="@+id/tv_save"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/save" />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray2"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp" >

                    <ImageView
                        style="@style/createEventIconStyle"
                        android:src="@drawable/ic_title"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:paddingTop="6dp"
                        android:paddingBottom="5.5dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp">

                        <EditText
                            android:fontFamily="@font/font_light"
                            android:id="@+id/et_event_title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/title"
                            android:textColor="#252525"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            style="@style/createEventItemTextView" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView_event_color"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_margin="8.5dp"
                            app:cardBackgroundColor="?attr/colorPrimary"
                            app:cardCornerRadius="2dp"
                            android:src="@drawable/ic_title"/>

                    </LinearLayout>

                </LinearLayout>

                <View style="@style/createEventSeparator"
                    android:layout_marginStart="57dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp">

                    <ImageView
                        style="@style/createEventIconStyle"
                        android:src="@drawable/ic_check"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="7dp"
                        android:paddingBottom="6.5dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp">

                        <TextView
                            android:fontFamily="@font/font_light"
                            android:id="@+id/tv_completed"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/completed"
                            android:textColor="#252525"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            style="@style/createEventItemTextView" />

                        <Switch
                            android:id="@+id/checkbox_completed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                    </LinearLayout>

                </LinearLayout>

                <View style="@style/createEventSeparator"
                    android:layout_marginStart="57dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp" >

                    <ImageView
                        style="@style/createEventIconStyle"
                        android:src="@drawable/ic_clock"/>

                    <TextView
                        android:fontFamily="@font/font_light"
                        android:id="@+id/tv_date"
                        style="@style/createEventItemTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        android:background="?selectableItemBackground"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:paddingTop="6.5dp"
                        android:paddingBottom="6.5dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        tools:text="요일, dd/MM   HH:ss" />


                </LinearLayout>

                <View style="@style/createEventSeparator" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>